// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FhirMedication should pass nodes and links through for UPDSF 1`] = `
Array [
  Object {
    "coding": Array [
      Object {
        "code": "21433011000036107",
        "display": "paracetamol",
        "system": "http://snomed.info/sct",
      },
    ],
    "status": "active",
    "type": "UPD",
  },
  Object {
    "coding": Array [
      Object {
        "code": "2442011000036104",
        "display": "paracetamol",
        "system": "http://snomed.info/sct",
      },
    ],
    "type": "substance",
  },
  Object {
    "coding": Array [
      Object {
        "code": "23628011000036109",
        "display": "paracetamol 500 mg tablet",
        "system": "http://snomed.info/sct",
      },
    ],
    "focused": true,
    "lastModified": "2014-06-30",
    "sourceCodeSystemUri": "http://snomed.info/sct",
    "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
    "status": "active",
    "type": "UPDSF",
  },
  Object {
    "coding": Array [
      Object {
        "code": "b7f1994510a18da0103b35620dfc814f2be4923255aeb25571ee2119c60d6248",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "52258011000036105",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 10 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "52806011000036108",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 10 mg + doxylamine succinate 5.1 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-02-29",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "52803011000036102",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 15 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPDSF",
      },
    ],
    "query": "type:MPUU status:active ancestor:\\"23628011000036109|paracetamol 500 mg tablet\\"",
    "total": 28,
    "type": "group",
  },
  Object {
    "coding": Array [
      Object {
        "code": "703bcb66bdd47710c84c54d3cad5691009d961a6e281993b08d4370698092da7",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "54282011000036105",
            "display": "Paracetamol (Herron) 500 mg uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-08-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "88341000036103",
            "display": "Calmative Pain Relief (Pharmacy Action) uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-08-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "1062931000168103",
            "display": "Pain Relief Paracetamol plus Codeine with Calmative (Cipla) uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2018-01-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "BPSF",
      },
    ],
    "query": "type:TPUU status:active ancestor:\\"23628011000036109|paracetamol 500 mg tablet\\"",
    "total": 406,
    "type": "group",
  },
  Object {
    "coding": Array [
      Object {
        "code": "efd01939a0b0bca57dd79e20ee5add615af0999c43802f5bd8394ccd6d106f8e",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "63941011000036106",
            "display": "paracetamol 500 mg tablet, 48",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPG",
      },
      Object {
        "coding": Array [
          Object {
            "code": "46260011000036106",
            "display": "paracetamol 500 mg tablet, 24",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPG",
      },
      Object {
        "coding": Array [
          Object {
            "code": "46259011000036105",
            "display": "paracetamol 500 mg tablet, 20",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPG",
      },
    ],
    "query": "type:MPP status:active package:\\"23628011000036109|paracetamol 500 mg tablet\\"",
    "total": 25,
    "type": "group",
  },
]
`;

exports[`FhirMedication should pass nodes and links through for UPDSF 2`] = `
Array [
  Object {
    "source": "23628011000036109",
    "target": "21433011000036107",
    "type": "is-a",
  },
  Object {
    "source": "23628011000036109",
    "target": "2442011000036104",
    "type": "has-boss",
  },
  Object {
    "source": "group-b7f1994510a18da0103b35620dfc814f2be4923255aeb25571ee2119c60d6248",
    "sourceIsGroup": true,
    "target": "23628011000036109",
    "type": "is-a",
  },
  Object {
    "source": "group-703bcb66bdd47710c84c54d3cad5691009d961a6e281993b08d4370698092da7",
    "sourceIsGroup": true,
    "target": "23628011000036109",
    "type": "is-a",
  },
  Object {
    "source": "group-efd01939a0b0bca57dd79e20ee5add615af0999c43802f5bd8394ccd6d106f8e",
    "sourceIsGroup": true,
    "target": "23628011000036109",
    "type": "has-updsf",
  },
]
`;

exports[`FhirMedication should pass nodes and links through for substance 1`] = `
Array [
  Object {
    "coding": Array [
      Object {
        "code": "2292011000036106",
        "display": "loratadine",
        "system": "http://snomed.info/sct",
      },
    ],
    "focused": true,
    "lastModified": "2014-06-30",
    "status": "active",
    "type": "substance",
  },
  Object {
    "coding": Array [
      Object {
        "code": "21701011000036106",
        "display": "loratadine",
        "system": "http://snomed.info/sct",
      },
    ],
    "lastModified": "2014-06-30",
    "sourceCodeSystemUri": "http://snomed.info/sct",
    "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
    "status": "active",
    "type": "UPD",
  },
  Object {
    "coding": Array [
      Object {
        "code": "44955011000036104",
        "display": "loratadine + pseudoephedrine",
        "system": "http://snomed.info/sct",
      },
    ],
    "lastModified": "2014-06-30",
    "sourceCodeSystemUri": "http://snomed.info/sct",
    "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
    "status": "active",
    "type": "UPD",
  },
  Object {
    "coding": Array [
      Object {
        "code": "ed21534b55176f52a3da4c912e7b8a47ead3dcf991151770a52f1e75cf453c3a",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "45158011000036102",
            "display": "loratadine 5 mg + pseudoephedrine sulfate 120 mg modified release tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-05-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "22427011000036102",
            "display": "loratadine 10 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "86001000036103",
            "display": "loratadine 10 mg effervescent tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPDSF",
      },
    ],
    "query": "type:MPUU status:active ingredient:2292011000036106|loratadine",
    "total": 7,
    "type": "group",
  },
  Object {
    "coding": Array [
      Object {
        "code": "82df773525a8913e150373c1d3e957c13cccee2c47e952eedc620eccac2cf34f",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "924539011000036107",
            "display": "Claratyne-D with Decongestant Repetab modified release tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-05-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "54112011000036105",
            "display": "Claratyne 10 mg effervescent tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "649061000168101",
            "display": "Lorastyne (Pharmacy Action) 10 mg uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-08-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "BPSF",
      },
    ],
    "query": "type:TPUU status:active ingredient:2292011000036106|loratadine",
    "total": 27,
    "type": "group",
  },
]
`;

exports[`FhirMedication should pass nodes and links through for substance 2`] = `
Array [
  Object {
    "source": "21701011000036106",
    "target": "2292011000036106",
    "type": "has-ingredient",
  },
  Object {
    "source": "44955011000036104",
    "target": "2292011000036106",
    "type": "has-ingredient",
  },
  Object {
    "source": "group-ed21534b55176f52a3da4c912e7b8a47ead3dcf991151770a52f1e75cf453c3a",
    "sourceIsGroup": true,
    "target": "2292011000036106",
    "type": "has-boss",
  },
  Object {
    "source": "group-82df773525a8913e150373c1d3e957c13cccee2c47e952eedc620eccac2cf34f",
    "sourceIsGroup": true,
    "target": "2292011000036106",
    "type": "has-boss",
  },
]
`;

exports[`FhirMedication should update child bundles 1`] = `
Array [
  Object {
    "coding": Array [
      Object {
        "code": "21433011000036107",
        "display": "paracetamol",
        "system": "http://snomed.info/sct",
      },
    ],
    "status": "active",
    "type": "UPD",
  },
  Object {
    "coding": Array [
      Object {
        "code": "2442011000036104",
        "display": "paracetamol",
        "system": "http://snomed.info/sct",
      },
    ],
    "type": "substance",
  },
  Object {
    "coding": Array [
      Object {
        "code": "23628011000036109",
        "display": "paracetamol 500 mg tablet",
        "system": "http://snomed.info/sct",
      },
    ],
    "focused": true,
    "lastModified": "2014-06-30",
    "sourceCodeSystemUri": "http://snomed.info/sct",
    "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
    "status": "active",
    "type": "UPDSF",
  },
  Object {
    "coding": Array [
      Object {
        "code": "b7f1994510a18da0103b35620dfc814f2be4923255aeb25571ee2119c60d6248",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "52258011000036105",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 10 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "52806011000036108",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 10 mg + doxylamine succinate 5.1 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-02-29",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "52803011000036102",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 15 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "UPDSF",
      },
    ],
    "query": "type:MPUU status:active ancestor:\\"23628011000036109|paracetamol 500 mg tablet\\"",
    "total": 28,
    "type": "group",
  },
  Object {
    "coding": Array [
      Object {
        "code": "703bcb66bdd47710c84c54d3cad5691009d961a6e281993b08d4370698092da7",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "54282011000036105",
            "display": "Paracetamol (Herron) 500 mg uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-08-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "88341000036103",
            "display": "Calmative Pain Relief (Pharmacy Action) uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-08-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "1062931000168103",
            "display": "Pain Relief Paracetamol plus Codeine with Calmative (Cipla) uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2018-01-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "type": "BPSF",
      },
    ],
    "query": "type:TPUU status:active ancestor:\\"23628011000036109|paracetamol 500 mg tablet\\"",
    "total": 406,
    "type": "group",
  },
]
`;

exports[`FhirMedication should update the primary resource 1`] = `
Array [
  Object {
    "coding": Array [
      Object {
        "code": "2292011000036106",
        "display": "loratadine",
        "system": "http://snomed.info/sct",
      },
    ],
    "focused": true,
    "lastModified": "2014-06-30",
    "status": "active",
    "type": "substance",
  },
]
`;
